bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Erreur de compilation :
MonkeyTrouble:3: error: value and is not a member of Boolean
  if (aSmile and bSmile) {
             ^MonkeyTrouble:6: error: value and is not a member of Boolean
  if (!(aSmile) and (!(bSmile))) {
                ^